NXP-18076: Remove MaxPermSize option