@@ -1,11 +1,11 @@
 @echo off
 rem ##
-rem ## (C) Copyright 2010-2014 Nuxeo SA (http://nuxeo.com/) and contributors.
+rem ## (C) Copyright 2010-2015 Nuxeo SA (http://nuxeo.com/) and contributors.
 rem ##
 rem ## All rights reserved. This program and the accompanying materials
 rem ## are made available under the terms of the GNU Lesser General Public License
 rem ## (LGPL) version 2.1 which accompanies this distribution, and is available at
-rem ## http://www.gnu.org/licenses/lgpl.html
+rem ## http://www.gnu.org/licenses/lgpl-2.1.html
 rem ##
 rem ## This library is distributed in the hope that it will be useful,
 rem ## but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -195,7 +195,7 @@ if "%JAVA_VERSION%" lss "%REQUIRED_JAVA_VERSION%" (
   goto END
 )
 
-if "%JAVA_OPTS%" == "" set JAVA_OPTS=-Xms512m -Xmx1024m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000 -Dfile.encoding=UTF-8
+if "%JAVA_OPTS%" == "" set JAVA_OPTS=-Xms512m -Xmx1024m -Djava.net.preferIPv4Stack=true -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000 -Dfile.encoding=UTF-8
 REM ***** Add third-party packages from the installer to the path *****
 set PATH=%NUXEO_HOME%\3rdparty\ffmpeg\bin;%NUXEO_HOME%\3rdparty\ImageMagick;%PATH%;%NUXEO_HOME%\3rdparty\pdftohtml;%NUXEO_HOME%\3rdparty\gs\bin;%NUXEO_HOME%\3rdparty\misc\bin
 
